Bug 26453 - [3.4 Regression] Segfault with -m64 -mtraceback=full
Summary: [3.4 Regression] Segfault with -m64 -mtraceback=full
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.2.0
: P3 normal
Target Milestone: 4.0.4
Assignee: Alan Modra
URL: http://gcc.gnu.org/ml/gcc-patches/200...
Keywords:
Depends on:
Blocks:
 
Reported: 2006-02-24 02:01 UTC by Alan Modra
Modified: 2006-03-19 22:28 UTC (History)
3 users (show)

See Also:
Host:
Target: powerpc64-*-*
Build:
Known to work: 3.3.6 4.2.0 4.1.1 4.0.4
Known to fail: 3.4.6 4.0.2 4.1.0
Last reconfirmed: 2006-02-24 02:02:28


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Modra 2006-02-24 02:01:02 UTC
The following segfaults in rs6000_output_function_epilogue when compiled with -m64 -mtraceback=full.  r_o_f_e is being called via final_end_function in rs6000_output_mi_thunk.  This is a regression from gcc-3.3.x.

class A1 {
public:
  virtual ~A1();
};
class A2 : public A1 { };
class A3 : virtual public A2 { };

class A4 : public A3 {
public:
  ~A4(void);
};
A4::~A4(void) {}
Comment 1 Alan Modra 2006-02-24 06:30:55 UTC
Subject: Bug 26453

Author: amodra
Date: Fri Feb 24 06:30:51 2006
New Revision: 111415

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=111415
Log:
	PR target/26453
	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Don't
	output traceback table for thunks.  Localise rs6000_stack_info call.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/rs6000/rs6000.c

Comment 2 Alan Modra 2006-03-01 22:58:02 UTC
Subject: Bug 26453

Author: amodra
Date: Wed Mar  1 22:57:59 2006
New Revision: 111618

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=111618
Log:
	PR target/26453
	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Don't
	output traceback table for thunks.  Localise rs6000_stack_info call.


Modified:
    branches/gcc-4_1-branch/gcc/ChangeLog
    branches/gcc-4_1-branch/gcc/config/rs6000/rs6000.c

Comment 3 Alan Modra 2006-03-19 22:26:42 UTC
Subject: Bug 26453

Author: amodra
Date: Sun Mar 19 22:26:37 2006
New Revision: 112216

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=112216
Log:
	PR target/26453
	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Don't
	output traceback table for thunks.  Localise rs6000_stack_info call.


Modified:
    branches/gcc-4_0-branch/gcc/ChangeLog
    branches/gcc-4_0-branch/gcc/config/rs6000/rs6000.c

Comment 4 Alan Modra 2006-03-19 22:28:13 UTC
3.4 branch is closed