	PR target/26453 	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Don't 	output traceback table for thunks.  Localise rs6000_stack_info call.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@111415 138bc75d-0d04-0410-961f-82ee72b054a4